--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body": "^5.1.0",
     "express": "^4.17.1",
-    "parser": "^0.1.4"
+    "mongoose": "^5.9.13",
+    "mongoose-unique-validator": "^2.0.3",
+    "parser": "^0.1.4",
+    "underscore": "^1.10.2"
   }
 }
